# OHC-Calc

./: README.md  pyproject.toml
conductor_library/: __init__.py  materials.py
conductor_library/data/: conductor_family_materials.csv
conductor_library/data/conductors/: aaac.csv  aac.csv  aacsr.csv  aactw.csv  acar.csv  accc.csv  accr.csv  acsr.csv  acsrtw.csv  acss.csv  acsstw.csv  hd_copper.csv  manifest.csv
frontend/: app.py
scripts/: extract_conductor_sheets.py
tests/: test_smoke.py
thermal_engine/: __init__.py  core.py  ieee738.py
